--- a/Darryls challenge game.html
+++ b/Darryls challenge game.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<index.html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -392,3 +392,4 @@
     </script>
 </body>
 </html>
+
