--- a/Darryls challenge game.html
+++ b/Darryls challenge game.html
@@ -1,9 +1,9 @@
-<index.html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darryl Wright III Finance Challenge</title>
+    <index.html>
     
     <!-- Open Graph meta tags for social media sharing -->
     <meta property="og:title" content="The Financial Challenge by Darryl Wright III" />
@@ -392,4 +392,5 @@
     </script>
 </body>
 </html>
+
 
