--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <index.html>
+    <title>Darryl Wright III Finance Challenge</title>
     
     <!-- Open Graph meta tags for social media sharing -->
     <meta property="og:title" content="The Financial Challenge by Darryl Wright III" />
@@ -392,5 +392,6 @@
     </script>
 </body>
 </html>
+
 
 
